fixed button overflow, for large screens.

--- a/styles.css
+++ b/styles.css
@@ -177,32 +177,29 @@ i {
     align-items: flex-start;
     margin-left: 32px;
     width: 40%;
-
 }
 
 .perfume { /*This is my product category type title*/
     font-family: "Montserrat", san serif;
     color: hsl(228, 12%, 48%);
     letter-spacing: .2rem;
-    font-size: 12px;
-    margin-bottom: 0;
+    font-size: .8em;
+    margin-bottom: 1rem;
 }
 
 .name-title { /*This is my product brand title*/
-    font-size: 30px;
+    font-size: 2em;
     font-family: "Fraunces", san serif;
-    justify-content: left;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     margin-top: 0;
 }
 
 .description { /*This is my description of product*/
-    font-size: 1em;
+    font-size: .9em;
     font-family: "Montserrat", san serif;
-    font-weight: 500, 700;
     color: hsl(228, 12%, 48%);
     margin-top: 0;
-    letter-spacing: .1rem;
+    line-height: 1.5rem;
 }
 
 .pricing-box {
@@ -239,11 +236,12 @@ i {
     font-family: "Montserrat", san serif;
     font-weight: 900;
     color: white;
-    font-size: 16px;
-    width: 330px;
-    border-radius: 5px;
+    font-size: 1em;
+    width: 150%;
+    border-radius: .7rem;
     border: none;
-    padding: 10px; 
+    padding: .8rem; 
+    margin-top: 2rem;
 }
 
 button {
